compiler/tests/invalid_programs/invalid_unary_operation.jm
!SyntaxError

def :self
  puts("foo")
end
